--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -1,6 +1,6 @@
 
 // Google Fonts
-@import url(http://fonts.googleapis.com/css?family=IBM+Plex+Sans);
+@import url(https://fonts.googleapis.com/css?family=IBM+Plex+Sans);
 
 // Font Variables
 $font-stack: 'IBM Plex Sans', serif;
