--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -43,7 +43,6 @@ h1 {
 	color: $label-color;
 	font-size: $label-size;
 }
-
 .container-fluid {
 	display: flex;
 	flex-direction: column;
@@ -59,6 +58,8 @@ h1 {
 	left: 0;
 	right: 0;
 	overflow-y: auto;
+	padding-left: 30px;
+    margin-left: -30px;
 }
 
 
