--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -8,6 +8,7 @@ $font-stack: 'IBM Plex Sans', serif;
 $primary-color: #666;
 $dark-primary-color: #000;
 $label-size: 12px;
+$primary-size: 18px;
 
 
 $bg-toolbar-color: #000;
@@ -25,6 +26,8 @@ $l-color: #BFBFBF;
 body {
   font: 100% $font-stack;
   color: $primary-color;
+  font-size: $primary-size;
+  line-height:28px;
 }
 
 a {
