--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -86,8 +86,7 @@ h1 {
 	left: 0;
 	right: 0;
 	overflow-y: auto;
-	padding-left: 30px;
-    margin-left: -30px;
+    -webkit-overflow-scrolling:touch;
 }
 
 .positive {
