--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -250,11 +250,19 @@ h1 {
 	}
 
 }
+
+
+/*Други, восславьте Анатолия! Вчера он ушёл огненной тропой в чертог Ярилы и, 
+присягнув под стягом с коловратом, стал в строй небесной рати рядом с Доброславом*/
+
+.ff-post {
+	padding-bottom: 140px;
+}
+
 @media (min-width: 768px) {
 	.ff-post {
 		width: 63%;
 		margin: 0 auto;
-		padding-bottom: 140px;
 	}
 }
 .ff-post.page-enter-active, .ff-post.page-leave-active {
