--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -11,7 +11,6 @@ $label-size: 12px;
 $coin-info-size: 14px;
 $primary-size: 18px;
 
-
 $bg-main-color: #fff;
 $bg-toolbar-color: #000;
 $border-thin-color:#E6E6E6;
@@ -69,6 +68,9 @@ h1 {
 .margin60 {
 	margin-top: 60px;
 }
+.border_top {
+	border-top: 1px solid #BFBFBF;
+}
 .ff-label {
 	color: $label-color;
 	font-size: $label-size;
@@ -106,6 +108,47 @@ h1 {
 
 .ff-content {
 	position: relative;
+	.btn-group {
+		margin: 0 7px 0 0  !important;
+		float: right;
+		height: 56px !important;
+		line-height: 56px;
+		li {
+			list-style: none;
+			margin: 0;
+			padding: 0; 
+		}
+	}
+	.dropdown-menu {
+		display: block;
+	}
+	.dropdown-toggle {
+		text-align: right;
+		background: none !important;
+		color: $dark-primary-color !important;
+		text-transform: uppercase !important;
+		font-weight: bold !important;
+		font-size: $label-size;
+	}
+	.dropdown-toggle::after {
+		display: none;
+	}
+	.caret {
+		top: 25px !important;
+		margin-left: 13px !important;
+	}
+}
+
+@media (max-width: 769px) {
+	.ff-content {
+		.btn-group {
+			height: 48px !important;
+			line-height: 48px;
+		}
+		.caret {
+			top: 22px !important;
+		}
+	}
 }
 
 .ff-toolbar {
@@ -132,6 +175,7 @@ h1 {
 	top: 0px;
 	right: 0;
 }
+
 
 .ff-center-panel {
     display: none;
@@ -185,7 +229,6 @@ h1 {
 		box-shadow: 0 5px 30px rgba($bg-toolbar-color, .0);
 		transition: box-shadow 0.1s ease-in-out;
 		position: relative;
-		border-left: 1px solid $border-bold-color;
 		border-bottom: 1px solid $border-thin-color;
 		.ff-news-cell {
 			display: block;
@@ -248,13 +291,24 @@ h1 {
 			display: inline-block;
 		}
 	}
+	.tools {
+		margin: 24px 32px 0 24px;
+		.social {
+			text-align: right;
+			img {
+				height: 16px;
+				margin-right: 24px;
+				cursor: pointer;
+			}
+		}
+	}
+
 
 }
 
 
 /*Други, восславьте Анатолия! Вчера он ушёл огненной тропой в чертог Ярилы и, 
 присягнув под стягом с коловратом, стал в строй небесной рати рядом с Доброславом*/
-
 .ff-post {
 	padding-bottom: 140px;
 }
@@ -270,9 +324,6 @@ h1 {
 }
 .ff-post.page-enter, .ff-post.page-leave-active, .ff-post.page-leave {
 	opacity: 0
-}
-.social {
-	padding: 24px;
 }
 
 
@@ -292,8 +343,18 @@ h1 {
 .coin-unit {
 	color: $dark-primary-color;
 	line-height:28px;
-
 }
+
+@media (max-width: 769px) {
+	.coin-value {
+		font-size: 24px;
+	}
+	.coin-unit {
+		color: $dark-primary-color;
+		font-size:14px;
+	}
+}
+
 .coin-info {
 	color: $dark-primary-color;
 	font-size: $coin-info-size;
@@ -304,6 +365,19 @@ h1 {
 	border-top: 1px solid $border-bold-color;
 	border-bottom: 1px solid $border-bold-color;
 }
+@media (max-width: 769px) { 
+	.coin_detail_unit {
+		margin: 10px 0;
+		.coin-detail {
+			font-size: 12px;
+		}
+		.coin-detail-info {
+			font-size: 12px;
+		}
+	}
+}
+
+
 .coin-detail{
 	color: $dark-primary-color;
 	font-weight: bold;
@@ -318,12 +392,17 @@ h1 {
 	font-weight: bold;
 }
 
-
-
-
-.ff-right-panel .right_tabs {
-	display:none;
+.ff-right-panel {
+	border-left: 1px solid $border-bold-color;
+	.right_tabs {
+		display:none;
+	}
+	.scroll-container {
+		top: 56px;
+	}
 }
+
+
 @media (max-width: 769px) {
 	.ff-right-panel .right_tabs{
 		display: block;
@@ -342,7 +421,7 @@ h1 {
 		right: 0;
 	}
 	.ff-right-panel .right_tabs li{
-		margin: 0 0 0 24px;
+		margin: 0;
 	}
 
 	.ff-right-panel .right_tabs li a{
@@ -352,6 +431,8 @@ h1 {
 		line-height: 48px;
 		background: none;
 		border:none;
+		padding: 0 24px 0 24px;
+		border-right: 1px solid $border-bold-color;
 	}
 
 	.ff-right-panel .right_tabs li button:focus{
@@ -362,5 +443,27 @@ h1 {
 		top: 48px;
 	}
 }
+
+.ff-footer {
+	box-shadow: inset 0 1px 0 0 #BFBFBF;
+	span {
+		line-height: 48px;
+	}
+	.social {
+		text-align: right;
+		a {
+			width: 24px;
+			height: 24px;
+			line-height: 48px;
+			margin-right: 24px;
+			img {
+				height: 16px;
+			}
+		}
+	}
+}
+
+
+
 
 
