--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -164,8 +164,7 @@ h1 {
 
 .ff-toolbar {
 	background: $bg-toolbar-color;
-	padding-right: 24px;
-    padding-left: 24px;
+	padding: 0 24px 0 24px !important;
 	.normal-logo{
 		margin: 16px 0px;
 	}
@@ -466,6 +465,7 @@ h1 {
 }
 
 .ff-footer {
+	padding-left: 24px;
 	box-shadow: inset 0 1px 0 0 #BFBFBF;
 	span {
 		line-height: 48px;
