--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -44,6 +44,16 @@ h1 {
 	color: $dark-primary-color;
 }
 
+@media (max-width: 769px) { 
+	h1 {
+		font-size: 24px;
+	}
+
+	h2 {
+		font-size: 24px;
+	}
+}
+
 .margin5 {
 	margin-top: 5px;
 }
@@ -88,6 +98,7 @@ h1 {
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
+	overflow-x: hidden; 
 	.ff-content {
 		flex: 1 0 auto;
 	}
