--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -81,7 +81,7 @@ h1 {
 	margin-top: 40px;
 }
 .margin60 {
-	margin-top: 60px;
+	margin-top: 60px !important;
 }
 .border_top {
 	border-top: 1px solid #BFBFBF;
@@ -353,63 +353,56 @@ h1 {
 	flex-direction: column;
     display: none;
     background-color: $bg-main-color;
+}
 
 
-		.currency {
-			padding: 20px 24px;
-			border-right: 1px solid $border-bold-color;
-			border-bottom: 1px solid $border-thin-color;
-			box-shadow: 0 5px 30px rgba($bg-toolbar-color, .0);
-			transition: box-shadow 0.1s ease-in-out;
-			position: relative;
-			border-bottom: 1px solid $border-thin-color;
+.currency {
+	padding: 20px 24px;
+	border-right: 1px solid $border-bold-color;
+	border-bottom: 1px solid $border-thin-color;
+	box-shadow: 0 5px 30px rgba($bg-toolbar-color, .0);
+	transition: box-shadow 0.1s ease-in-out;
+	position: relative;
+	border-bottom: 1px solid $border-thin-color;
 
 
 
-			.ff-news-cell {
-				display: block;
-				position: relative;
-				padding: 24px;
-				.ff-nc-title {
-					display: inline-block;
-					margin-top: 12px;
-				}
-			}
-			.click-area {
-				display:block;
-				position:absolute;
-				left:0;
-				right:0;
-				top:0;
-				bottom:0;
-				content:'';
-				cursor:pointer;
-			}
-			a:not(.click-area) {
-				position: relative;
-				z-index: 1;
-			}
-			a.nuxt-link-active {
-				color: $link-color;
-				transition: color 0.1s ease-in-out;
-			}
+	.ff-news-cell {
+		display: block;
+		position: relative;
+		padding: 24px;
+		.ff-nc-title {
+			display: inline-block;
+			margin-top: 12px;
 		}
-		.currency:hover {
-			box-shadow: 0 5px 30px rgba($bg-toolbar-color, .15);
-
-		}
-		.currency:hover a:not(.nuxt-link-active) {
-			color: $dark-primary-color;
-
-		}
-
-
-		.coin_row {
-			.coin_details_item {
-				display: inline-block;
-			}
-		}
-	
+	}
+	.click-area {
+		display:block;
+		position:absolute;
+		left:0;
+		right:0;
+		top:0;
+		bottom:0;
+		content:'';
+		cursor:pointer;
+	}
+	a:not(.click-area) {
+		position: relative;
+		z-index: 1;
+	}
+	a.nuxt-link-active {
+		color: $link-color;
+		transition: color 0.1s ease-in-out;
+	}
+	.coin_details_item {
+		display: inline-block;
+	}
+}
+.currency:hover {
+	box-shadow: 0 5px 30px rgba($bg-toolbar-color, .15);
+}
+.currency:hover a:not(.nuxt-link-active) {
+	color: $dark-primary-color;
 }
 
 @media (min-width: 768px) {
